--- a/PolymerStart/components/name-stuff.html
+++ b/PolymerStart/components/name-stuff.html
@@ -16,6 +16,9 @@
             <br />
             <label class$="{{labelClass}}">{{label}}</label>
             <input type="text" value="{{textValue::change}}" placeholder="{{placeholderText}}" />
+            <br/>
+            <label class="label label-info" >{{textValue}}</label>
+            <br/>
             <button type="button" class="btn btn-danger" on-click="buttonClickEvent">{{buttonText}}</button>
 
             <div style$="{{resultsStyle}}">
